--- a/style/style.css
+++ b/style/style.css
@@ -114,7 +114,7 @@ nav ul {
 nav ul a {
   color: #ffffff;
   margin: 0;
-  padding: 1vw;
+  padding: 15px;
   text-transform: uppercase;
   transition: 0.3s;
 
