--- a/style/style.css
+++ b/style/style.css
@@ -116,6 +116,7 @@ nav ul a {
   margin: 0;
   padding: 1vw;
   text-transform: uppercase;
+
   transition: 0.3s;
 
 }
@@ -149,6 +150,7 @@ nav ul a:hover::after {
   margin: 150px;
   text-align: center;
   padding: 0 90px;
+  margin-top: 248px;
 }
 
 .banner .banner-text h1 {
