--- a/responsivo.css
+++ b/responsivo.css
@@ -262,7 +262,7 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #333;
+  background-color: #0c0549;
   color: #fff;
   position: fixed;
   top: 0;
