--- a/style/style.css
+++ b/style/style.css
@@ -517,7 +517,8 @@ h1 {
   z-index: 9999;
   font-size: 16px;
   padding: 2px 12px;
-  background-color: #333;
+  background-color: #33333394;
+  opacity: 5;
   color: #fff;
   border: none;
   outline: none;
@@ -791,7 +792,7 @@ footer {
   background-color: #555;
   margin-top: 25px;
   width: 100%;
-  height: 150px;
+  height: 30%;
   color: #fff;
 
 }
@@ -811,7 +812,7 @@ Footer p {
 }
 
 .redesSociais {
-  margin-right: 25vw;
+  margin-right: 5vw;
   margin-top: 2vw;
   color: #fff;
 }
@@ -899,4 +900,15 @@ Footer p {
   font-size: 2rem;
   cursor: pointer;
   display: none;
+}
+
+
+.mapa iframe{
+  width: 250px;
+  height: 150px;
+  display: flex;
+  margin: auto;
+  border-radius: 25px;
+  overflow: hidden;
+  
 }
