--- a/responsivo.css
+++ b/responsivo.css
@@ -74,9 +74,15 @@ p {
   width: 95%;
   margin-left: 15vw;
 }
-
+.gallery {
+  width: 80%;
+  gap:4px;
+ }
 .galeriaEmpresa {
   margin-top: -2px;
+}
+.galeria-items {
+  width: 300px;
 }
 
 .foto {
@@ -90,10 +96,14 @@ p {
 
   width: 100%;
 }
+.servicos p{
+ margin-left: 15%;
+}
 
-.BannerFoto {
-  background-size: contain;
-  background-attachment: scroll;
+.NossoServico img {
+  display: none;
+  margin-right: 15px;
+ box-shadow: 0 0 20px black;
 }
 
 .BannerFoto h1 {
@@ -120,6 +130,14 @@ p {
   margin-left: 14vw;
 }
 
+.BannerFoto {
+  background-image: url(../img/Galeria/guincho.JPG);
+  /* background-attachment: fixed; */
+  background-repeat: no-repeat;
+  background-size:auto;
+
+}
+
 .BannerGaleria h1 {
   margin-top: 152px;
 }
@@ -134,37 +152,10 @@ p {
 }
 
 .triangulo5 {
-  /* height: 40vw; */
   position: absolute;
   margin-top: 60px;
 }
 
-.galeria-container .galeria-items {
-  width: 150px;
-
-}
-.container-clientes {
-  height: 120px;
-  width: 310px;
-}
-
-.gallery-wrapper {
-  margin-top: -8px;
-  width: 250px;
-}
-
-.item {
-  width: 139px;
-  height: 94px;
-  margin-top: 12px;
-}
-
-.gallery {
-  display: flex;
-  margin-top: -8px;
-  flex-flow: row nowrap;
-  gap: 15px;
-}
 
 .whatsapp i {
   padding: 10.5px;
@@ -175,6 +166,9 @@ p {
   text-align: center;
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
+}
+footer{
+  height: 250px;
 }
 
 .responsiva {
@@ -196,6 +190,7 @@ p {
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
 }
+
 .redesSociais a,
 .zap,
 .insta {
@@ -203,7 +198,7 @@ p {
 }
 .responsiva {
   display: flex;
-  margin-top: 25px;
+  margin-top: 150px;
   width: 56%;
 }
 
