--- a/style/style.css
+++ b/style/style.css
@@ -17,7 +17,7 @@
 } */
 
 body {
-  background-color: #010525;
+  background-color: white;
 }
 
 section {
@@ -31,7 +31,7 @@ h3 {
 }
 
 p {
-  color: #fff;
+  color: #111010;
 }
 
 .logo {
@@ -107,7 +107,7 @@ nav {
 nav ul {
   display: flex;
   align-items: center;
-  background-color: #010525c7;
+  background-color: #1414a8ce;
 
 }
 
@@ -150,17 +150,14 @@ nav ul a:hover::after {
   margin: 150px;
   text-align: center;
   padding: 0 90px;
-
   margin-top: 248px;
-
   margin-top:248px;
-
 }
 
 .banner .banner-text h1 {
   font-size: 40px;
   color: white;
-  text-shadow: 0 0 15px #010525;
+  text-shadow: 0 0 15px white;
 }
 
 .banner .banner-text p {
@@ -175,7 +172,7 @@ nav ul a:hover::after {
 }
 
 .faca-mais .container {
-  background-color: #010525;
+  background-color: white;
   padding: 10px;
   display: flex;
   align-items: center;
@@ -188,7 +185,7 @@ nav ul a:hover::after {
 }
 
 .servicos {
-  background-color: #010525;
+  background-color: white;
 }
 
 .faca-mais-text {
@@ -208,13 +205,13 @@ nav ul a:hover::after {
 #saibamais {
 
   margin-top: 90px;
-  margin-left: 15%;
+  margin-left: 33%;
 }
 
 .imagemSobre {
-  background-image: url(../img/Galeria/guindaste.jpg);
-  width: 250px;
-  height: 250px;
+  /* background-image: url(../img/Galeria/guindaste.jpg); */
+  width: 90%;
+  height: 100%;
   background-repeat: no-repeat;
   background-size: cover;
   margin-left: 10%;
@@ -233,12 +230,12 @@ nav ul a:hover::after {
   height: 0;
   border-top: 80px solid transparent;
   border-bottom: 0px solid transparent;
-  border-left: 100vw solid #010525
+  border-left: 100vw solid white
 }
 
 .banner2 {
   overflow-y: hidden;
-  background-color: #010525;
+  background-color: white;
   background-image: url(../img/Galeria/solda.jpg);
   background-repeat: no-repeat;
   background-position: center;
@@ -258,18 +255,24 @@ nav ul a:hover::after {
 
   overflow: hidden;
   display: flex;
-  background-color: #010525;
-
-
+  background-color: white;
 }
 
 .servicos p {
   font-family: 'Inter', sans-serif;
   margin-top: 15px;
-  color: #ede8e8;
-  width: 100%;
+  color: #dfdfdf;
+  background-color: #2d1a7ed8;
+  width: 70%;
   margin-left: 20px;
   padding-right: 25px;
+}
+
+.NossoServico img {
+  width: 50%;
+  display: flex;
+  margin-right: 25px;
+  box-shadow: 0 0 15px #000000;
 }
 
 #serv {
@@ -287,7 +290,7 @@ nav ul a:hover::after {
   position: absolute;
   margin-top: -2;
   height: 0;
-  border-top: 80px solid #010525;
+  border-top: 80px solid white;
   border-bottom: 0px solid transparent;
   border-left: 100vw solid transparent;
 }
@@ -322,7 +325,7 @@ h1 {
   margin-left: 35vw;
   margin-top: 85px;
   margin-bottom: 5%;
-  border-radius: 14px;
+  /* border-radius: 14px; */
   opacity: 1;
   transition: opacity .5s ease-in-out;
 
@@ -396,7 +399,7 @@ h1 {
 
 /*GALLERY*/
 .BannerFoto {
-  background-image: url(../img/Galeria/muck.jpeg);
+  background-image: url(../img/Galeria/guincho.JPG);
   /* background-attachment: fixed; */
   background-repeat: no-repeat;
   background-size: cover;
@@ -430,31 +433,22 @@ h1 {
   height: 0;
   border-top: 80px solid transparent;
   border-bottom: 0px solid transparent;
-  border-left: 100vw solid #010525;
+  border-left: 100vw solid white;
 }
 
 .triangulo4 {
   position: absolute;
   margin-top: 25px;
   height: 0;
-  border-top: 80px solid #010525;
+  border-top: 80px solid white;
   border-bottom: 0px solid transparent;
   border-left: 100vw solid transparent;
 
 }
 
-/* .triangulo5 {
-  position: absolute;
-  width: 1000px;
-   height: 40vw; 
-  border-top: 80px solid transparent;
-  border-bottom: 0px solid transparent;
-  border-left: 100vw solid #010525;
-} */
 
 .galeriaEmpresa {
-  background-color: #010525;
-  margin-top: -100px;
+  background-color: white
 
 }
 
@@ -471,30 +465,18 @@ h1 {
   margin-top: 70px;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  gap: 2vw;
-  padding: 0 1vw;
-
-
-
-
 }
 
 .galeria-container a {
-  margin-top: 20px;
-  border: 8px solid rgb(53, 50, 50);
-  border-radius: 8px;
-  box-shadow: 0 0 15px #4f9cf9;
   transition: 1.5s;
   overflow: hidden;
   margin-bottom: 25px;
 }
 
 .galeria-items {
-  width: 190px;
-  height: 150px;
+  width: 250px;
+  height: 250px;
   flex-grow: 1;
-
-
 }
 
 .a:hover {
@@ -549,7 +531,7 @@ h1 {
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
-  background-position-y: center;
+  /* background-position-y: center; */
   width: 100%;
   height: 40vw;
   overflow: hidden;
@@ -569,7 +551,7 @@ h1 {
   position: absolute;
   margin-top: 25px;
   height: 0;
-  border-top: 80px solid #010525;
+  border-top: 80px solid white;
   border-bottom: 0px solid transparent;
   border-left: 100vw solid transparent;
 }
@@ -582,7 +564,7 @@ h1 {
   height: 0;
   border-top: 80px solid transparent;
   border-bottom: 0px solid transparent;
-  border-left: 100vw solid #010525;
+  border-left: 100vw solid white;
 }
 
 
@@ -596,7 +578,6 @@ h1 {
 }
 
 .forms form {
-  background-color: #010525;
   margin: auto;
 }
 
@@ -657,12 +638,12 @@ h1 {
 }
 
 dialog::backdrop {
-  background-color: rgb(0 0 0 /.9);
+  background-color: rgba(97, 94, 94, 0.9);
 
 }
 
 dialog {
-  background-color: #010525;
+  background-color: #081153b9;
   border: none;
   margin: auto;
   outline: none;
@@ -677,16 +658,13 @@ h1 {
 }
 
 .container-clientes {
-  position: relative;
-  padding: 15px;
-  max-width: 640px;
-  margin: 0 auto;
+  margin-top: 25px;
+ width: auto;
+} 
 
-}
 
-.gallery-wrapper {
-  overflow-x: auto;
-}
+/*
+
 
 .arrow-left,
 .arrow-right {
@@ -728,72 +706,35 @@ h1 {
 .arrow-left {
   margin-left: -14px;
 
-}
+} */
 
 .gallery {
   display: flex;
-  margin-top: 25px;
-  flex-flow: row nowrap;
+  margin-top: 70px;
+  flex-wrap: wrap;
+  margin: auto;
+  width:90%;
   gap: 15px;
-  overflow-y: none;
 
 }
 
 .item {
-  width: 250px;
-  height: 250px;
-  flex-shrink: 0;
-  /* transition: all 600ms ease-in-out;
-  opacity: 0.5; */
-}
 
-.current-item {
-  opacity: 1;
-}
-
-.gallery-wrapper::-webkit-scrollbar {
-  display: none;
-}
-
-
-.gallery-wrapper {
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-}
-
-.cyan {
-  background: cyan;
-}
-
-.deeppink {
-  background: deeppink;
-}
-
-.turquoise {
-  background: turquoise;
-}
-
-.darkblue {
-  background: darkblue;
-}
-
-.purple {
-  background: purple;
-}
-
-
-.gallery button {
-  display: none;
+  width: 150px;
+  height: 90px;
+  box-shadow: 0 0 9px rgb(10, 10, 10);
 }
 
 
 footer {
+  display: flex;
+  justify-content: space-around;
   margin-top: 33px;
-  background-color: #555;
-  margin-top: 25px;
+  background-color: #12063d;
+  margin-top: 45px;
   width: 100%;
-  height: 30%;
-  color: #fff;
+  height: 350px;
+ 
 
 }
 
@@ -801,19 +742,21 @@ footer i {
   align-items: center;
 }
 
-Footer {
+.Footer {
+  margin-top: 45px;
   padding: 5px;
-  display: flex;
   justify-content: space-between;
 }
 
-Footer p {
+.Footer p {
+
   padding: 5px;
+  color: #fff;
 }
 
 .redesSociais {
   margin-right: 5vw;
-  margin-top: 2vw;
+  margin-top: 45px;
   color: #fff;
 }
 
@@ -910,5 +853,6 @@ Footer p {
   margin: auto;
   border-radius: 25px;
   overflow: hidden;
+  margin-top: 45px;
   
 }
