--- a/style/style.css
+++ b/style/style.css
@@ -157,8 +157,18 @@ nav ul a:hover::after {
 .banner .banner-text h1 {
   font-size: 40px;
   color: white;
-  text-shadow: 0 0 15px white;
+  text-shadow: 0 0 8px white;
 }
+.banner .banner-text h2 {
+  font-size: 40px;
+  color: rgb(85, 68, 163);
+  background-color: #616161c4;
+  text-shadow: 0 0 5px rgb(10, 3, 3);
+  margin-top: 10px;
+ padding: 15px;
+
+}
+
 
 .banner .banner-text p {
   font-size: 25px;
