--- a/style/style.css
+++ b/style/style.css
@@ -684,6 +684,8 @@ dialog::backdrop {
 
 }
 
+
+
 dialog {
   background-image: url(../img/Galeria/faleconosco.jpeg);
   border: none;
@@ -701,9 +703,47 @@ dialog h1 {
   margin-top: -5px;
   margin-bottom: -10px;
 }
+ /*candidato*/
 
+ #candidato{
+  background-image: url(https://th.bing.com/th/id/OIP.m4odwmZcxe5ykNYfplYskgHaHa?pid=ImgDet&rs=1);
+  height: 500px;
+  background-size: contain;
+ }
 
-h1 {
+ #candidato h3 {
+  margin-top: 150px;
+  border: none;
+  text-align: center;
+  color: #000000;
+  font-weight: bolder;
+  font-size: 2rem;
+ }
+
+ /* #btnCandidato {
+ 
+  
+    margin: auto;
+    flex-direction: column;
+    padding: 25px;
+    border: none;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    color: #ffffff;
+    background-color: #3253be;
+    cursor: pointer;
+    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.9);
+    transition: 1s;
+  } */
+
+ /* #candidato #upload {
+ display: flex;
+ margin: auto;
+ border: none;
+ background-color: #fdfdfd;
+ } */
+ 
+ h1 {
   text-align: center;
   margin: 1em 0;
   font-family: sans-serif;
